--- a/SlideCreater/App.xaml
+++ b/SlideCreater/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:SlideCreater"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DrawingBrush x:Key="BackgroundTileBrush" TileMode="Tile" Viewport="0,0,32,32" ViewportUnits="Absolute">
+            <DrawingBrush.Drawing>
+                <GeometryDrawing Geometry="M0,0 H1 V1 H2 V2 H1 V1 H0z" Brush="LightGray"/>
+            </DrawingBrush.Drawing>
+        </DrawingBrush>
+
     </Application.Resources>
 </Application>
