--- a/SlideCreater/ViewControls/SlideContentPresenter.xaml
+++ b/SlideCreater/ViewControls/SlideContentPresenter.xaml
@@ -11,18 +11,10 @@
             <Viewbox Stretch="Uniform" UIElement.PreviewMouseDown="OnControlMouseDown">
                 <Border>
                     <Grid Height="1080" Width="1920">
-                        <Rectangle>
-                            <Rectangle.Fill>
-                                <DrawingBrush TileMode="Tile" Viewport="0,0,32,32" ViewportUnits="Absolute">
-                                    <DrawingBrush.Drawing>
-                                        <GeometryDrawing Geometry="M0,0 H1 V1 H2 V2 H1 V1 H0z" Brush="LightGray"/>
-                                    </DrawingBrush.Drawing>
-                                </DrawingBrush>
-                            </Rectangle.Fill>
-                        </Rectangle>
+                        <Rectangle Fill="{StaticResource BackgroundTileBrush}"></Rectangle>
                         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="200" Opacity="0.5">Empty Slide</TextBlock>
                         <Image Name="ImgDisplay"></Image>
-                        <MediaElement Name="VideoDisplay"></MediaElement>
+                        <MediaElement LoadedBehavior="Manual" Name="VideoDisplay"></MediaElement>
                     </Grid>
                 </Border>
             </Viewbox>
