--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -129,7 +129,7 @@
                 <Viewbox Stretch="Uniform">
                     <Grid Width="660">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="360"></RowDefinition>
+                            <RowDefinition Height="480"></RowDefinition>
                             <RowDefinition Height="280"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
@@ -139,8 +139,30 @@
                                     <RowDefinition></RowDefinition>
                                     <RowDefinition></RowDefinition>
                                     <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <Grid Grid.Row="0">
+                                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                                        <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="200">
+                                            <StackPanel>
+                                                <TextBlock HorizontalAlignment="Center">TIME</TextBlock>
+                                                <Viewbox>
+                                                    <TextBlock Name="TbTime" Foreground="Orange">00:00:00</TextBlock>
+                                                </Viewbox>
+                                            </StackPanel>
+                                        </Border>
+                                        <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="150">
+                                            <StackPanel>
+                                                <TextBlock HorizontalAlignment="Center">TIME</TextBlock>
+                                                <Viewbox>
+                                                    <TextBlock Name="TbShotClock" Foreground="Orange">00:00</TextBlock>
+                                                </Viewbox>
+                                            </StackPanel>
+                                        </Border>
+                                    </StackPanel>
+
+                                </Grid>
+                                <Grid Grid.Row="1">
                                     <Border Style="{StaticResource GroupBorder}">
                                         <StackPanel>
                                             <TextBlock TextAlignment="Center" Margin="0,5,0,0">PRESET</TextBlock>
@@ -157,7 +179,7 @@
                                         </StackPanel>
                                     </Border>
                                 </Grid>
-                                <Grid Grid.Row="1">
+                                <Grid Grid.Row="2">
                                     <Border Style="{StaticResource GroupBorder}">
                                         <StackPanel>
                                             <TextBlock TextAlignment="Center" Margin="0,5,0,0">PROGRAM</TextBlock>
@@ -174,7 +196,7 @@
                                         </StackPanel>
                                     </Border>
                                 </Grid>
-                                <Grid Grid.Row="2">
+                                <Grid Grid.Row="3">
                                     <Grid>
                                         <Border Style="{StaticResource GroupBorder}" Width="160" HorizontalAlignment="Left">
                                             <StackPanel>
@@ -183,14 +205,6 @@
                                                     <Button Name="BtnFTB" Click="ClickFTB" Style="{StaticResource SwitcherButton}">FTB</Button>
                                                     <Button Style="{StaticResource InactiveSwitcherButton}">BARS</Button>
                                                 </StackPanel>
-                                            </StackPanel>
-                                        </Border>
-                                        <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="200" HorizontalAlignment="Center">
-                                            <StackPanel>
-                                                <TextBlock HorizontalAlignment="Center">TIME</TextBlock>
-                                                <Viewbox>
-                                                    <TextBlock Name="TbTime" Foreground="Orange">00:00:00</TextBlock>
-                                                </Viewbox>
                                             </StackPanel>
                                         </Border>
                                         <Border Style="{StaticResource GroupBorder}" Width="160" HorizontalAlignment="Right">
