--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -153,7 +153,7 @@
                                         </Border>
                                         <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="150">
                                             <StackPanel>
-                                                <TextBlock HorizontalAlignment="Center">TIME</TextBlock>
+                                                <TextBlock HorizontalAlignment="Center">TIME ON SHOT</TextBlock>
                                                 <Viewbox>
                                                     <TextBlock Name="TbShotClock" Foreground="Orange">00:00</TextBlock>
                                                 </Viewbox>
